# graphlist

./: LICENSE  README.md  example_code.py  pyproject.toml
src/graphlist/: __init__.py  graphlist.py  graphlist_hdf.py
tests/: test_graphlist.py
