[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphlist"
version = "0.0.1"
authors = [
  { name="robin ruff"},
]
description = "A datastructure for homogeneous graph data."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
        'networkx',
        'h5py',
        'numpy',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/robinruff/graphlist"
"Bug Tracker" = "https://github.com/robinruff/graphlist/issues"

